--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,8 +3,4 @@
     padding: 0;
     box-sizing: border-box;
 }
-html, body { height: 100%; }
-body {
-    background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
-    overflow: hidden;
-}
+html, body, .app-container { height: 100%; }
